# knot-ops

./: Cargo.toml  README.md  deny.toml  deny.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question---support.md
.github/workflows/: audit.yml  check.yml  coverage.yml  deny.yml  pr-checks.yml  release.yml
docs/: architecture.md  flows.md  roadmap.md  states.md
src/core/: Cargo.toml
src/core/src/: config.rs  data.rs  errors.rs  events.rs  lib.rs  states.rs  utils.rs
src/core/src/errors/: config.rs  daemon.rs  services.rs  transport.rs
src/transport/: Cargo.toml
src/transport/src/: codec.rs  lib.rs  messages.rs  middleware.rs  transport.rs  types.rs
src/transport/src/codec/: bincode.rs  json.rs
src/transport/src/messages/: context.rs  daemon.rs  metadata.rs
src/transport/src/middleware/: pipeline.rs  traits.rs
src/transport/src/transport/: handler.rs  ipc.rs  traits.rs
src/transport/tests/integration/: ipc_test.rs  transport_test.rs
