[package]
name = "knot-transport"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = "1.50.0"
knot-core = { path="../core" }
async-trait = "0.1.89"
interprocess = { version = "2.4.0", features = ["tokio"] }
bincode = "3.0.0"

[dev-dependencies]
tokio = { version = "1.50.0", features = ["full", "test-util"] }

[[test]]
name = "ipc_transport_test"
path = "tests/integration/ipc_test.rs"
